# ha-splitsmart

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  M1_PLAN.md  M2_PLAN.md  M3_PLAN.md  M4_PLAN.md  M5_PLAN.md  README.md  SPEC.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  test.yml
custom_components/splitsmart/: __init__.py  binary_sensor.py  cleanup.py  config_flow.py  const.py  coordinator.py  frontend_registration.py  fx.py  http.py  ledger.py  manifest.json  recurring.py  rules.py  sensor.py  services.py  services.yaml  storage.py  websocket_api.py
custom_components/splitsmart/frontend/: .gitkeep
frontend/: package-lock.json  package.json  rollup.config.js  tsconfig.json  vitest.config.ts
frontend/src/: api.ts  router.ts  splitsmart-card.ts  styles.ts  types.ts
frontend/tests/: api.test.ts  router.test.ts  smoke.test.ts
scripts/: deploy-pi.sh
tests/: MANUAL_QA_M1.md  MANUAL_QA_M2.md  MANUAL_QA_M3.md  MANUAL_QA_M4.md  MANUAL_QA_M5.md  conftest.py  test_cleanup.py  test_config_flow.py  test_coordinator.py  test_fx.py  test_fx_sanity.py  test_http_upload.py  test_importer_dedup.py  test_importer_facade.py  test_importer_mapping.py  test_importer_normalise.py  test_importer_parsers.py  test_importer_presets.py  test_ledger.py  test_recurring_loader.py  test_recurring_materialise.py  test_recurring_schedule.py  test_rules.py  test_rules_evaluate.py  test_rules_match_payload.py  test_sensors.py  test_sensors_fx_healthy.py  test_services.py  test_services_fx.py  test_services_materialise.py  test_storage.py  test_websocket_api.py
(+63 files in other folders)
